plenty plent additions, cant be bothered to note them all, it's a lot

--- a/project/html_templates/emailPaymentConfirmation.html
+++ b/project/html_templates/emailPaymentConfirmation.html
@@ -75,9 +75,9 @@
       <div class="footer">
         <p>
           If you did not make this payment, please contact us immediately at
-          <a href="mailto:support@example.com">support@example.com</a>.
+          <a href="mailto:support@trustlock.com">support@trustlock.com</a>.
         </p>
-        <p>© {{ year }} Your Company Name, All rights reserved.</p>
+        <p>© {{ year }} TrustLock, All rights reserved.</p>
       </div>
     </div>
   </body>
